Fix alignment of posters/screenings in both hero and screenings sections. Create ScreeningsList, ScreeningsListView and ScreenngsPosterView

--- a/src/scss/Hero.scss
+++ b/src/scss/Hero.scss
@@ -89,4 +89,10 @@
     }
   }
 
+  @media (max-width: 767px) {
+    .hero-list-container-content .featured-movies {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
